# pharmacy_bot

./: .gitignore  AUDIT_REPORT.md  FINAL_AUDIT.md  LICENSE  README.md
ai_agent/: __init__.py  config.py  drug_kb.py  drugs_sample.py  llm_client.py  symptom_agent.py
docs/: 01_系统架构设计.md  02_硬件选型说明.md  03_软件架构说明.md  04_视觉识别方案.md  05_语音交互方案.md  06_AI推荐系统.md  07_药物管理流程.md  DISCLAIMER.md  architecture.html
docs/答辩PPT/: index.html
ocr_barcode/: __init__.py  barcode_scanner.py  drug_detector.py  ocr_scanner.py
scripts/: install_deps.sh  start.sh  start_ai_only.sh
slidev/: package-lock.json  package.json  pharmacy_bot_答辩PPT.md
src/: command
src/xf_mic_asr_offline/: CMakeLists.txt
src/xf_mic_asr_offline/config/: call.bnf
src/xf_mic_asr_offline/config/msc/res/asr/GrmBuilld/: call_16K
src/xf_mic_asr_offline/config/msc/res/asr/GrmBuilld/temp/: call.g
src/xf_mic_asr_offline/launch/: dance.launch  mic_init.launch  voice_control_color_sortting.launch  voice_control_color_track.launch  voice_control_pharmacy.launch  voice_control_remove_too_high.launch  voice_control_shape_recogntion.launch  voice_control_track_and_grab.launch  voice_control_waste_classification.launch
src/xf_mic_asr_offline/scripts/: asr_node.py  get_result.py  voice_control_color_sortting.py  voice_control_color_track.py  voice_control_pharmacy.py  voice_control_remove_too_high.py  voice_control_shape_recognition.py  voice_control_track_and_grab.py  voice_control_waste_classification.py
src/xf_mic_asr_offline/src/xf_mic_asr_offline/: voice_play.py  voice_play_1.py
(+315 files in other folders)
